Employee. Add swither languare.

--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -1,123 +1,188 @@
 {
-	"app_init" : {
-		"phrases" : {
-			"sing_in"  : "Sing in",
-			"email"    : "Email",
-			"password" : "Password",
-			"try"      : "TRY"
+	"app_init": {
+		"phrases": {
+			"sing_in": "Sing in",
+			"email": "Email",
+			"password": "Password",
+			"try": "TRY",
+			"en": "English",
+			"ru": "Русский"
 		}
 	},
-	"left_menu" : {
-		"dashboard" : "Dashboard",
-		"profile"   : "Profile",
-		"employees" : "Employees",
-		"clients"   : "Clients",
-		"news"      : "News"
+	"left_menu": {
+		"dashboard": "Dashboard",
+		"profile": "Profile",
+		"employees": "Employees",
+		"clients": "Clients",
+		"news": "News"
 	},
-	"dash" : {
+	"dash": {
 		"Edit Profile": "Edit Profile",
-		"Complete your profile" : "Complete your profile",
-		"Last Name" : "Last Name",
-		"First Name" : "First Name",
-		"Update Profile" : "Update Profile",
-		"Employee avatar" : "Employee avatar",
-		"For change avatar use service" : "For change avatar use service",
-		"dashboard" : "Dashboard",
-		"profile"   : "Profile",
-		"employees" : "Employees",
-		"clients"   : "Clients",
-		"news"      : "News",
-		"title":"Title",
+		"Complete your profile": "Complete your profile",
+		"Last Name": "Last Name",
+		"First Name": "First Name",
+		"Update Profile": "Update Profile",
+		"Employee avatar": "Employee avatar",
+		"For change avatar use service": "For change avatar use service",
+		"dashboard": "Dashboard",
+		"profile": "Profile",
+		"employees": "Employees",
+		"clients": "Clients",
+		"news": "News",
+		"title": "Title",
 		"title (max length 250 symbols)": "title (max length 250 symbols)",
-		"author":"Author",
-		"publish_at":"Date published",
-		"created_by":"Who created",
-		"created_at":"Date created",
-		"updated_by":"Who updated",
-		"updated_at":"Date updated",
-		"is_active":"Is active",
-		"actions" : "Actions",
-		"No data" : "No data",
-		"Add" : "Add",
-		"news-add" : "Add news",
-		"In English":"In English",
-		"In Russian":"In Russian",
-		"Text" : "Text",
-		"Save" : "Save",
+		"author": "Author",
+		"publish_at": "Date published",
+		"created_by": "Who created",
+		"created_at": "Date created",
+		"updated_by": "Who updated",
+		"updated_at": "Date updated",
+		"is_active": "Is active",
+		"actions": "Actions",
+		"No data": "No data",
+		"Add": "Add",
+		"news-add": "Add news",
+		"In English": "In English",
+		"In Russian": "In Russian",
+		"Text": "Text",
+		"Save": "Save",
 		"Field `author`. Must be email": "Field `author`. Must be email",
-		"Field `publish_at`. Must be today or future" : "Field `Date published`. Should be today or in the future",
-		"Field `title`. Is required." : "Field `title`. Is required.",
-		"Field `title`. More 250 symbols." : "Field `title`. More 250 symbols.",
-		"Field `text`. Is required." : "Field `text`. Is required.",
-		"Error in save news" : "Error in save news",
-		"Current" : "Current",
-		"from" : "from",
-		"Activate" : "Activate",
-		"Deactivate" : "Deactivate",
-		"Edit" : "Edit",
-		"logout" : "Logout",
-		"Error news activate" : "Error news activate",
-		"News has updated the status of activity" : "News has updated the status of activity",
-		"You are sure?" : "You are sure?",
-		"news-edit" : "Edit news",
-		"No found news id" : "No found news id",
-		"Error load news" : "Error load news",
+		"Field `publish_at`. Must be today or future": "Field `Date published`. Should be today or in the future",
+		"Field `title`. Is required.": "Field `title`. Is required.",
+		"Field `title`. More 250 symbols.": "Field `title`. More 250 symbols.",
+		"Field `text`. Is required.": "Field `text`. Is required.",
+		"Error in save news": "Error in save news",
+		"Current": "Current",
+		"from": "from",
+		"Activate": "Activate",
+		"Deactivate": "Deactivate",
+		"Edit": "Edit",
+		"logout": "Logout",
+		"Error news activate": "Error news activate",
+		"News has updated the status of activity": "News has updated the status of activity",
+		"You are sure?": "You are sure?",
+		"news-edit": "Edit news",
+		"No found news id": "No found news id",
+		"Error load news": "Error load news",
 		"locale": {
 			"startYear": 1900,
 			"endYear": 2099,
 			"dateFormat": "YYYY-MM-DD",
-			"days": ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-			"shortDays": ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"],
-			"shorterDays": ["S", "M", "T", "W", "T", "F", "S"],
-			"months": ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
-			"shortMonths": ["Jan", "Feb", "Mar", "Apr", "May", "June", "July", "Aug", "Sept", "Oct", "Nov", "Dec"],
-			"shorterMonths": ["J", "F", "M", "A", "M", "Ju", "Ju", "A", "Se", "O", "N", "D"]
+			"days": [
+				"Sunday",
+				"Monday",
+				"Tuesday",
+				"Wednesday",
+				"Thursday",
+				"Friday",
+				"Saturday"
+			],
+			"shortDays": [
+				"Sun",
+				"Mon",
+				"Tue",
+				"Wed",
+				"Thu",
+				"Fri",
+				"Sat"
+			],
+			"shorterDays": [
+				"S",
+				"M",
+				"T",
+				"W",
+				"T",
+				"F",
+				"S"
+			],
+			"months": [
+				"January",
+				"February",
+				"March",
+				"April",
+				"May",
+				"June",
+				"July",
+				"August",
+				"September",
+				"October",
+				"November",
+				"December"
+			],
+			"shortMonths": [
+				"Jan",
+				"Feb",
+				"Mar",
+				"Apr",
+				"May",
+				"June",
+				"July",
+				"Aug",
+				"Sept",
+				"Oct",
+				"Nov",
+				"Dec"
+			],
+			"shorterMonths": [
+				"J",
+				"F",
+				"M",
+				"A",
+				"M",
+				"Ju",
+				"Ju",
+				"A",
+				"Se",
+				"O",
+				"N",
+				"D"
+			]
 		},
-		"name":"Name",
-		"surname":"Surname",
-		"groups":"Groups",
-		"is_deleted":"Deleted",
-		"confirm_at":"Date Confirm",
-		"confirm_by":"Who confirm",
-		"client-add":"Adding client",
-		"Error in save client" : "Error in save client",
-		"Field `{field}`. Is required." : "Field `{field}`. Is required.",
+		"name": "Name",
+		"surname": "Surname",
+		"groups": "Groups",
+		"is_deleted": "Deleted",
+		"confirm_at": "Date Confirm",
+		"confirm_by": "Who confirm",
+		"client-add": "Adding client",
+		"Error in save client": "Error in save client",
+		"Field `{field}`. Is required.": "Field `{field}`. Is required.",
 		"Field `{field}`. Must be email": "Field `{field}`. Must be email",
-		"password" : "Password",
-		"repeat"   : "Confirm" ,
-		"Bad confirmation password" : "Bad confirmation password",
-		"The password must have a number and a capital letter and at least 8 characters (A,..z0..9)" : "The password must have a number and a capital letter and at least 8 characters (A,..z0..9)",
-		"Delete" : "Delete",
-		"Restore" : "Restore",
-		"Error delete/restore client" : "Error delete/restore client",
-		"Client delete or restore ok" : "Client delete or restore ok",
-		"Client is active" : "Client is active",
-		"Error activate client" : "Error activate client",
-		"clients-edit" : "Edit client",
-		"Error load client" : "Error load client",
-		"Show filters" : "Show filters",
-		"Hide filters" : "Hide filters",
-		"By activation" : "By activation",
-		"By remove" : "By remove",
-		"isActivate" : "Active",
-		"isNoActivate" : "Неактивные",
-		"isDeleted" : "Deleted",
-		"isNoDeleted" : "Not deleted",
-		"all" : "All",
-		"Apply" : "Apply",
-		"employees-add" : "Add employee",
-		"employees-edit" : "Add employee",
-		"Error activate Employees" : "Error activate employee",
-		"admin" :"Admin",
-		"moderator" :"Moderator",
-		"content_manager" :"Content manager",
-		"content" :"Content manager",
-		"employee" :"Employee",
-		"root" :"Super administrator",
-		"No set groups." : "No set groups.",
-		"Error in save employees" : "Error in save employee",
-		"Employees is active/inactive" : "Employees is active/inactive",
-		"Employee delete or restore ok" : "Employee delete or restore ok",
-		"Error delete/restore" : "Error delete/restore"
+		"password": "Password",
+		"repeat": "Confirm",
+		"Bad confirmation password": "Bad confirmation password",
+		"The password must have a number and a capital letter and at least 8 characters (A,..z0..9)": "The password must have a number and a capital letter and at least 8 characters (A,..z0..9)",
+		"Delete": "Delete",
+		"Restore": "Restore",
+		"Error delete/restore client": "Error delete/restore client",
+		"Client delete or restore ok": "Client delete or restore ok",
+		"Client is active": "Client is active",
+		"Error activate client": "Error activate client",
+		"clients-edit": "Edit client",
+		"Error load client": "Error load client",
+		"Show filters": "Show filters",
+		"Hide filters": "Hide filters",
+		"By activation": "By activation",
+		"By remove": "By remove",
+		"isActivate": "Active",
+		"isNoActivate": "Неактивные",
+		"isDeleted": "Deleted",
+		"isNoDeleted": "Not deleted",
+		"all": "All",
+		"Apply": "Apply",
+		"employees-add": "Add employee",
+		"employees-edit": "Add employee",
+		"Error activate Employees": "Error activate employee",
+		"admin": "Admin",
+		"moderator": "Moderator",
+		"content_manager": "Content manager",
+		"content": "Content manager",
+		"employee": "Employee",
+		"root": "Super administrator",
+		"No set groups.": "No set groups.",
+		"Error in save employees": "Error in save employee",
+		"Employees is active/inactive": "Employees is active/inactive",
+		"Employee delete or restore ok": "Employee delete or restore ok",
+		"Error delete/restore": "Error delete/restore"
 	}
 }
