--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -4,7 +4,9 @@
 			"sing_in": "Регистрация",
 			"email": "Email",
 			"password": "Пароль",
-			"try": "ВХОД"
+			"try": "ВХОД",
+			"en": "English",
+			"ru": "Русский"
 		}
 	},
 	"left_menu": {
@@ -52,72 +54,135 @@
 		"Error in save news": "Ошибка при сохранении новости",
 		"Current": "Текущая",
 		"from": "из",
-		"Activate" : "Активировать",
-		"Deactivate" : "Деактировать",
-		"Edit" : "Редактировать",
-		"logout" : "Выход",
-		"Error news activate" : "Ошибка активации новости",
-		"News has updated the status of activity" : "Новость обновила статус активность",
-		"You are sure?" : "Ты уверен?",
-		"news-edit" : "Редактировать новость",
-		"No found news id" : "Нет айди новости",
-		"Error load news" : "Ошибка загрузки новости",
+		"Activate": "Активировать",
+		"Deactivate": "Деактировать",
+		"Edit": "Редактировать",
+		"logout": "Выход",
+		"Error news activate": "Ошибка активации новости",
+		"News has updated the status of activity": "Новость обновила статус активность",
+		"You are sure?": "Ты уверен?",
+		"news-edit": "Редактировать новость",
+		"No found news id": "Нет айди новости",
+		"Error load news": "Ошибка загрузки новости",
 		"locale": {
 			"startYear": 1900,
 			"endYear": 2099,
 			"dateFormat": "YYYY-MM-DD",
-			"days": ["Воскресенье", "Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота"],
-			"shortDays": [ "Вск","Пнд","Втр","Срд","Чтв","Птн","Сбт" ],
-			"shorterDays": ["Вс", "Пн", "Вт", "Ср", "Чт", "Пт", "Сб"],
-			"months": [ "Январь","Февраль","Март","Апрель","Май","Июнь", "Июль","Август","Сентябрь","Октябрь","Ноябрь","Декабрь" ],
-			"shortMonths": [ "Янв","Фев","Мар","Апр","Май","Июн","Июл","Авг","Сен","Окт","Ноя","Дек" ],
-			"shorterMonths": ["J", "F", "M", "A", "X", "Ju", "Ju", "A", "Se", "O", "N", "D"]
+			"days": [
+				"Воскресенье",
+				"Понедельник",
+				"Вторник",
+				"Среда",
+				"Четверг",
+				"Пятница",
+				"Суббота"
+			],
+			"shortDays": [
+				"Вск",
+				"Пнд",
+				"Втр",
+				"Срд",
+				"Чтв",
+				"Птн",
+				"Сбт"
+			],
+			"shorterDays": [
+				"Вс",
+				"Пн",
+				"Вт",
+				"Ср",
+				"Чт",
+				"Пт",
+				"Сб"
+			],
+			"months": [
+				"Январь",
+				"Февраль",
+				"Март",
+				"Апрель",
+				"Май",
+				"Июнь",
+				"Июль",
+				"Август",
+				"Сентябрь",
+				"Октябрь",
+				"Ноябрь",
+				"Декабрь"
+			],
+			"shortMonths": [
+				"Янв",
+				"Фев",
+				"Мар",
+				"Апр",
+				"Май",
+				"Июн",
+				"Июл",
+				"Авг",
+				"Сен",
+				"Окт",
+				"Ноя",
+				"Дек"
+			],
+			"shorterMonths": [
+				"J",
+				"F",
+				"M",
+				"A",
+				"X",
+				"Ju",
+				"Ju",
+				"A",
+				"Se",
+				"O",
+				"N",
+				"D"
+			]
 		},
-		"name":"Имя",
-		"surname":"Фамилия",
-		"groups":"Группы",
-		"is_deleted":"Удален",
-		"confirm_at":"Дата подтверждения",
-		"confirm_by":"Кто подтвердил",
-		"client-add":"Добавить Клиента",
-		"Error in save client" : "Ошибка при сохранении клиента",
-		"Field `{field}`. Is required." : "Поле `{field}`. Необходимо.",
+		"name": "Имя",
+		"surname": "Фамилия",
+		"groups": "Группы",
+		"is_deleted": "Удален",
+		"confirm_at": "Дата подтверждения",
+		"confirm_by": "Кто подтвердил",
+		"client-add": "Добавить Клиента",
+		"Error in save client": "Ошибка при сохранении клиента",
+		"Field `{field}`. Is required.": "Поле `{field}`. Необходимо.",
 		"Field `{field}`. Must be email": "Поле `{field}`. Должно быть электронной почтой",
-		"password" : "Пароль",
-		"repeat"   : "Подтверждение",
-		"Bad confirmation password" : "Плохо подтвердили пароль",
-		"The password must have a number and a capital letter and at least 8 characters (A,..z0..9)" : "Пароль должен иметь цифру и заглавную  букву и не меньше 8 символов (A,..z0..9)",
-		"Delete" : "Удалить",
-		"Restore" : "Востановить",
-		"Error delete/restore client" : "Ошибка удаления или востановления клиента",
-		"Client delete or restore ok" : "Удаление или востановление клиента успешно",
-		"Client is active" : "Клиент активен",
-		"Error activate client" : "Ошибка активации клиента",
- 		"clients-edit" : "Редактировать клиента",
-		"Error load client" : "Ошибка загрузки клиента",
-		"Show filters" : "Показать фильтры",
-		"Hide filters" : "Скрыть фильтры",
-		"By activation" : "По активации",
-		"By remove" : "По удалению",
-		"isActivate" : "Активные",
-		"isNoActivate" : "Неактивные",
-		"isDeleted" : "Удаленные",
-		"isNoDeleted" : "Не удаленные",
-		"all" : "Все",
-		"Apply" : "Применить",
-		"employees-add" : "Добавить работника",
-		"employees-edit" : "Редактировать работника",
-		"Error activate Employees" : "Ошибка активации работника",
-		"admin" :"Админ",
-		"moderator" :"Модератор",
-		"content_manager" :"Контент менеджер",
-		"content" :"Контент менеджер",
-		"employee" :"Наемный рабочий",
-		"root" :"Супер администратор",
-		"No set groups." : "Не установлены группы.",
-		"Error in save employees" : "Ошибка сохранения работника",
-		"Employees is active/inactive" : "Работник активен/неактивен",
-		"Employee delete or restore ok" : "Удаление или востановление работника успешно",
-		"Error delete/restore" : "Ошибка удаления или востановления"
+		"password": "Пароль",
+		"repeat": "Подтверждение",
+		"Bad confirmation password": "Плохо подтвердили пароль",
+		"The password must have a number and a capital letter and at least 8 characters (A,..z0..9)": "Пароль должен иметь цифру и заглавную  букву и не меньше 8 символов (A,..z0..9)",
+		"Delete": "Удалить",
+		"Restore": "Востановить",
+		"Error delete/restore client": "Ошибка удаления или востановления клиента",
+		"Client delete or restore ok": "Удаление или востановление клиента успешно",
+		"Client is active": "Клиент активен",
+		"Error activate client": "Ошибка активации клиента",
+		"clients-edit": "Редактировать клиента",
+		"Error load client": "Ошибка загрузки клиента",
+		"Show filters": "Показать фильтры",
+		"Hide filters": "Скрыть фильтры",
+		"By activation": "По активации",
+		"By remove": "По удалению",
+		"isActivate": "Активные",
+		"isNoActivate": "Неактивные",
+		"isDeleted": "Удаленные",
+		"isNoDeleted": "Не удаленные",
+		"all": "Все",
+		"Apply": "Применить",
+		"employees-add": "Добавить работника",
+		"employees-edit": "Редактировать работника",
+		"Error activate Employees": "Ошибка активации работника",
+		"admin": "Админ",
+		"moderator": "Модератор",
+		"content_manager": "Контент менеджер",
+		"content": "Контент менеджер",
+		"employee": "Наемный рабочий",
+		"root": "Супер администратор",
+		"No set groups.": "Не установлены группы.",
+		"Error in save employees": "Ошибка сохранения работника",
+		"Employees is active/inactive": "Работник активен/неактивен",
+		"Employee delete or restore ok": "Удаление или востановление работника успешно",
+		"Error delete/restore": "Ошибка удаления или востановления"
 	}
 }
