Custom news title column.

--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -42,7 +42,7 @@
 		"No data": "Нет данных",
 		"Add": "Добавить",
 		"news-add": "Добавить новость",
-		"In English": "На английском",
+		"In English": "На Английском",
 		"In Russian": "На Русском",
 		"Text": "Текст",
 		"Save": "Сохранить",
