Add rights to buttons and actions by group.

--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -23,7 +23,7 @@
 		"First Name": "Имя",
 		"Update Profile": "Сохранить",
 		"Employee avatar": "Аватар",
-		"For change avatar use service": "Для изменения автара используйте сервир",
+		"For change avatar use service": "Для изменения аватара используйте сервир",
 		"dashboard": "Рабочий стол",
 		"profile": "Профиль",
 		"employees": "Работники",
