Clients. Ready top menu.

--- a/server_clients/locales/ru.json
+++ b/server_clients/locales/ru.json
@@ -1,3 +1,15 @@
 {
-
+	"For correct site work need  include javascript.": "Для правильной работы сайта необходимо включить javascript.",
+	"en": "English",
+	"ru": "Русский",
+	"Igor Stcherbina": "Щербина Игорь",
+	"Copyright": "Авторские права",
+	"All Rights Reserved": "Все права защищены",
+	"Latest news": "Свежие новости",
+	"News": "Новости",
+	"Best news for you!": "Лучшие новости для вас!",
+	"news": "Новости",
+	"company": "Компания",
+	"about": "О нас",
+	"contacts": "Контакты"
 }
