--- a/server_clients/locales/en.json
+++ b/server_clients/locales/en.json
@@ -1,2 +1,15 @@
 {
+	"For correct site work need  include javascript." : "For correct site work need  include javascript.",
+	"en": "English",
+	"ru": "Русский",
+	"Igor Stcherbina" : "Igor Stcherbina",
+	"Copyright" : "Copyright",
+	"All Rights Reserved" : "All Rights Reserved",
+	"Latest news" : "Latest news",
+	"News" : "News",
+	"Best news for you!" : "Best news for you!",
+	"news": "News",
+	"company": "Company",
+	"about": "About us",
+	"contacts": "Contacts"
 }
