--- a/server_clients/locales/en.json
+++ b/server_clients/locales/en.json
@@ -18,7 +18,7 @@
 	"Author" : "Author",
 	"Date published" : "Date published",
 	"This campaign is really very cool." : "This campaign is really very cool.",
-	"It was founded in 20019 BC. The best dinosaurs and aliens." : "It was founded in 20019 BC. The best dinosaurs and aliens."
+	"It was founded in 20019 BC. The best dinosaurs and aliens." : "It was founded in 20019 BC. The best dinosaurs and aliens.",
 	"Phones of the company" : "Phones of the company",
 	"Addresses of the company" : "Addresses of the company"
 }
