Configurate webpack for clients.

--- a/server_clients/locales/en.json
+++ b/server_clients/locales/en.json
@@ -14,6 +14,7 @@
 	"contacts": "Contacts",
 	"registration": "Registration",
 	"login": "Login",
+	"Login/Registration" : "Login/Registration",
 	"Read More": "Read More",
 	"Author" : "Author",
 	"Date published" : "Date published",
