--- a/server_clients/locales/ru.json
+++ b/server_clients/locales/ru.json
@@ -14,6 +14,7 @@
 	"contacts": "Контакты",
 	"registration": "Регистрация",
 	"login": "Вход",
+	"Login/Registration" : "Вход/Регистрация",
 	"Read More": "Читать дальше",
 	"Author": "Автор",
 	"Date published": "Дата публикации",
