Bad work auht client.

--- a/server_clients/locales/en.json
+++ b/server_clients/locales/en.json
@@ -21,5 +21,12 @@
 	"This campaign is really very cool." : "This campaign is really very cool.",
 	"It was founded in 20019 BC. The best dinosaurs and aliens." : "It was founded in 20019 BC. The best dinosaurs and aliens.",
 	"Phones of the company" : "Phones of the company",
-	"Addresses of the company" : "Addresses of the company"
+	"Addresses of the company" : "Addresses of the company",
+	"Close" : "Close",
+	"Forgot Your Password?" : "Forgot Your Password?",
+	"Password" : "Password",
+	"You@email.com" : "You@email.com",
+	"Errors" : "Errors",
+	"Error" : "Error",
+	"Invalid password or email" : "Invalid password or email"
 }
