Ready send with confirm registration link.

--- a/server_clients/locales/en.json
+++ b/server_clients/locales/en.json
@@ -14,20 +14,30 @@
 	"contacts": "Contacts",
 	"registration": "Registration",
 	"login": "Login",
-	"Login/Registration" : "Login/Registration",
+	"Login/Registration": "Login/Registration",
 	"Read More": "Read More",
-	"Author" : "Author",
-	"Date published" : "Date published",
-	"This campaign is really very cool." : "This campaign is really very cool.",
-	"It was founded in 20019 BC. The best dinosaurs and aliens." : "It was founded in 20019 BC. The best dinosaurs and aliens.",
-	"Phones of the company" : "Phones of the company",
-	"Addresses of the company" : "Addresses of the company",
-	"Close" : "Close",
-	"Forgot Your Password?" : "Forgot Your Password?",
-	"Password" : "Password",
-	"You@email.com" : "You@email.com",
-	"Errors" : "Errors",
-	"Error" : "Error",
-	"Invalid password or email" : "Invalid password or email",
-	"logout" : "Logout"
+	"Author": "Author",
+	"Date published": "Date published",
+	"This campaign is really very cool.": "This campaign is really very cool.",
+	"It was founded in 20019 BC. The best dinosaurs and aliens.": "It was founded in 20019 BC. The best dinosaurs and aliens.",
+	"Phones of the company": "Phones of the company",
+	"Addresses of the company": "Addresses of the company",
+	"Close": "Close",
+	"Forgot Your Password?": "Forgot Your Password?",
+	"Password": "Password",
+	"You@email.com": "You@email.com",
+	"Errors": "Errors",
+	"Error": "Error",
+	"Invalid password or email": "Invalid password or email",
+	"logout": "Logout",
+	"You surname": "You surname",
+	"You name": "You name",
+	"Confirm password": "Confirm password",
+	"Passwords Don't Match": "Passwords Don't Match",
+	"Link for registration confirmation": "Link for registration confirmation",
+	"Click me": "Click me",
+	"Confirm registration": "Confirm registration",
+	"Sincerely Cool service": "Sincerely Cool service",
+	"A letter has been sent to you by email. In which the link to confirm the registration.": "A letter has been sent to you by email. In which the link to confirm the registration.",
+	"The link will be valid for 4 hours": "The link will be valid for 4 hours"
 }
