Clients. Ready first solution for registration.

--- a/server_clients/locales/ru.json
+++ b/server_clients/locales/ru.json
@@ -39,5 +39,13 @@
 	"Confirm registration": "Подтверждение регистрации",
 	"Sincerely Cool service": "С уважением Крутой сервис",
 	"A letter has been sent to you by email. In which the link to confirm the registration.": "Вам на email выслали письмо. В котором ссылка для подтверждения регистрации.",
-	"The link will be valid for 4 hours": "Ссылка будет действительной в течение 4 часов"
+	"The link will be valid for 4 hours": "Ссылка будет действительной в течение 4 часов",
+	"Yo have already been verified": "Вы уже были подтверждены",
+	"Your registration has been confirmed.": "Ваша регистрация подтверждена.",
+	"You have sent your password to the mail" : "Вам на почту выслали ваш пароль",
+	"Congratulations!": "Поздравляем!",
+	"You are registered with us": "Вы зарегистрированы у нас",
+	"Your login": "Ваш логин",
+	"Confirmation of registration ok": "Подтверждение регистрации в порядке",
+	"You have already been verified": "Вы уже были проверены"
 }
