--- a/server_clients/locales/en.json
+++ b/server_clients/locales/en.json
@@ -39,5 +39,12 @@
 	"Confirm registration": "Confirm registration",
 	"Sincerely Cool service": "Sincerely Cool service",
 	"A letter has been sent to you by email. In which the link to confirm the registration.": "A letter has been sent to you by email. In which the link to confirm the registration.",
-	"The link will be valid for 4 hours": "The link will be valid for 4 hours"
+	"The link will be valid for 4 hours": "The link will be valid for 4 hours",
+	"You have already been verified" : "You have already been verified",
+	"Your registration has been confirmed." : "Your registration has been confirmed.",
+	"You have sent your password to the mail" : "You have sent your password to the mail",
+	"Congratulations!" : "Congratulations!",
+	"You are registered with us" : "You are registered with us",
+	"Your login" : "Your login",
+	"Confirmation of registration ok" : "Confirm registration ok"
 }
