Clients first solution for comments.

--- a/server_clients/locales/en.json
+++ b/server_clients/locales/en.json
@@ -46,5 +46,8 @@
 	"Congratulations!" : "Congratulations!",
 	"You are registered with us" : "You are registered with us",
 	"Your login" : "Your login",
-	"Confirmation of registration ok" : "Confirm registration ok"
+	"Confirmation of registration ok" : "Confirm registration ok",
+	"Add comment": "Add comment",
+	"Enter Your Comment": "Enter Your Comment",
+	"Comments": "Comments"
 }
