--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -187,6 +187,8 @@
 		"Error get Employees" : "Ошибка загрузки рботников",
 		"Toggle navigation" : "Переключить навигацию",
 		"404 Not Found" : "404 Не Найдено",
-		"Oops! It seems that this page does not exist." : "К сожалению! Кажется, что этой страницы не существует."
+		"Oops! It seems that this page does not exist." : "К сожалению! Кажется, что этой страницы не существует.",
+		"Error updated" : "Ошибка обновлена",
+		"Success updated" : "Успешное обновление"
 	}
 }
