Employees. Star doit notifications.

--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -14,7 +14,8 @@
 		"profile": "Profile",
 		"employees": "Employees",
 		"clients": "Clients",
-		"news": "News"
+		"news": "News",
+		"notifications": "Notifications"
 	},
 	"dash": {
 		"Edit Profile": "Edit Profile",
@@ -193,6 +194,14 @@
 		"Count clients" : "Count clients",
 		"Count news"    : "Count news",
 		"yesterday" : "yesterday",
-		"today" : "today"
+		"today" : "today",
+		"notifications" : "Notifications",
+		"notifications-add" : "Add notification",
+		"data" : "Data",
+		"read_at" : "Date read",
+		"type" : "Type",
+		"subscribe" : "User email",
+		"Error in save notifications" : "Error in save notifications",
+		"Notification created" : "Notification created"
 	}
 }
