--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -202,6 +202,8 @@
 		"type" : "Type",
 		"subscribe" : "User email",
 		"Error in save notifications" : "Error in save notifications",
-		"Notification created" : "Notification created"
+		"Notification created" : "Notification created",
+		"Read" : "Read",
+		"Error set date read Notifications" : "Error set date read Notifications"
 	}
 }
