Employee. Correct for mobile.

--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -208,6 +208,9 @@
 		"Error get Notifications" : "Error get Notifications",
 		"By reading" : "By reading",
 		"Reading" : "Reading",
-		"No reading" : "No reading"
+		"No reading" : "No reading",
+		"Igor Stcherbina": "Igor Stcherbina",
+		"Copyright": "Copyright",
+		"All Rights Reserved": "All Rights Reserved"
 	}
 }
