--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -208,6 +208,9 @@
 		"Error get Notifications" : "Ошибка получения уведомлений",
 		"By reading" : "По прочтению",
 		"Reading" : "Прочитанные",
-		"No reading" : "Не прочитанные"
+		"No reading" : "Не прочитанные",
+		"Igor Stcherbina": "Щербина Игорь",
+		"Copyright": "Авторские права",
+		"All Rights Reserved": "Все права защищены"
 	}
 }
